[package]
name = "blinky"
version = "0.1.0"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "blinky"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-sys = { version = "0.35", features = ["binstart"] }
esp-idf-hal = "0.44.1"
esp-println = { version = "0.11.0", features = ["esp32c3"] }
ws2812-esp32-rmt-driver = {version="0.9.0", features=["smart-leds-trait"]}
smart-leds = "0.4.0"

[build-dependencies]
embuild = "0.32.0"
